print words paths